# Detextor-backend

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
app/: core.py  image_utils.py
app/flask/: routes.py
configs/: swagger.yaml
tests/: test_core.py  test_image_utils.py  utils.py
tests/data/: 1.txt
